# flatfab

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  FlatFab.pro  PlanarDisc.pro  PlanarDisc.pro.user.2.5pre1  PlanarDisc.pro.user.2.6pre1  PlanarDisc.pro.user.2.7pre1  README.md  beziercurve.cpp  beziercurve.h  bezierfit.cpp  bezierfit.h  com.flatfab.FlatFab.yml  eigen.h  flatfab.rc  glutils.cpp  glutils.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  physics.cpp  physics.h  physics_backup.h  physics_matrix3d.cpp  physics_vector3d.h  pivotcamera.h  planarsection.cpp  planarsection.h  resources.qrc  stylesheet.qss  transformwidget.cpp  transformwidget.h  tree.cpp  triangle.c  triangle.h  triangulate.cpp  (+3 more)
.github/workflows/: create_release.yml  linux_flatpak.yml  linux_release.yml
example_models/: ant.txt  bee.txt  bridge.txt  centipede.txt  dino.txt  dragon1.txt  dragon2.txt  elephant.txt  fish.txt  gearspider.txt  gearspider_holes.txt  high_heel.txt  man.txt  octopus.txt  physics_shape1.txt  physics_shape2.txt  physics_shape3.txt  physics_shape4.txt  physics_shape5.txt  physics_shape6.txt  physics_shape7.txt  physics_shape8.txt  physics_shape9.txt  plane.txt  spider.txt  spider2.txt  teaser_waterglass1.txt  teaser_waterglass2.txt  teaser_waterglass3.txt  warriorbug.txt
flatpak/: com.flatfab.FlatFab.yml  edu.toronto.dgp.FlatFab.yml  flatfab-launch.sh
include/: beziercurve.h  bezierfit.h  contourgraph.h  eigen.h  glutils.h  glwidget.h  mainwindow.h  physics.h  physics_backup.h  physics_matrix3d.h  physics_vector3d.h  pivotcamera.h  planarsection.h  transformwidget.h  tree.h  triangulate2.h  triangulate_old.h  version.h.in
src/: beziercurve.cpp  bezierfit.cpp  contourgraph.cpp  eigen.cpp  glutils.cpp  glwidget.cpp  main.cpp  mainwindow.cpp  physics.cpp  physics_backup.cpp  physics_matrix3d.cpp  physics_vector3d.cpp  pivotcamera.cpp  planarsection.cpp  transformwidget.cpp  tree.cpp  triangulate2.cpp  triangulate_old.cpp
(+6 files in other folders)
